--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -7,17 +7,21 @@ body {
     height: 100vh;
 }
 
-
 header {
     position: absolute;
     top: 0px;
     left: 0px;
+    z-index: 1000;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     border-bottom: 2px solid black;
     box-shadow: 20px;
+}
+
+nav > a {
+    padding: 0 5px;
 }
 
 main {
@@ -33,6 +37,18 @@ main {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+table td { text-align: center; padding: 0 20px;}
+
+ul {
+    list-style-type: none;
+}
+
+.menu-item {
+    border: 1px grey solid;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px 0;
+}
 /* .inventory-table {
 
 } */
