--- a/inventory/templates/inventory/purchase_list.html
+++ b/inventory/templates/inventory/purchase_list.html
@@ -1,2 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Django Delights - Purchases{% endblock %}
+{% block content %}
+<div>
+    <h2>Purchases</h2>
+    <p><a href="{% url 'add_purchase' %}" style="text-decoration: none;">+ Add Purchase</a></p>
+    <hr style="margin: 0px 0px 10px 0px;">
+    <table class="inventory-table">
+        <thead>
+            <tr>
+                <th>Menu Item</th>
+                <th>Price</th>
+                <th>Time</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for purchase in object_list %}
+            <tr>
+                <td>{{ purchase.ordered_item.item_name }}</td>
+                <td class="price">${{ purchase.ordered_item.item_price|floatformat:2 }}</td>
+                <td>{{ purchase.order_time }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
