--- a/inventory/templates/registration/login.html
+++ b/inventory/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Django Delights - Login{% endblock %}
 {% block content %}
   <div class="login-form">
     <h2>Login</h2>
